@@ -1,3 +1,5 @@
+2006/8/1 -- released version 20060801_trunk
+
 2006/7/31 -- released version 20060731_trunk
 
 2006/7/30 -- released version 20060730_trunk
